tests/diag/caret_expr.err
tests/diag/caret_expr.ty:2: error: expected an expression
     2 |     x := 1 +
       |             ^
